# ration-agent

./: .cnb.yml  .env.docker  .env.example  .gitignore  AGENTS.md  BEEF_SYSTEM_BLUEPRINT.md  CLAUDE.md  PROJECT.md  README.md  SETUP.md  aws_init.sql  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.deploy  agent.py  analyze_session.py  basic_test.py  chat_history_service.py  debug_state.py  formulate_cli.py  main.py  message_processor.py  models.py  nodes.py  prompt_loader.py  pyproject.toml  requirements.txt  routes.py  session_manager.py  setup_store.py  start_server.py  test_calculator.py  test_cmd.py  test_command_extractor.py  test_cost_analysis.json  test_extract.py  test_optimizer.py  test_repr_json.py  test_stream_file_export_parser.py  tools.py  usda_cli.py
backend/agents/: nodes.py
backend/api/: feedback_routes.py  routes.py
backend/auth/: admin_routes.py  config.py  database.py  models.py  routes.py  schemas.py  sms_service.py
backend/core/: agent.py
backend/formulation/: optimizer.py
backend/migrations/: add_animal_type_to_sessions.py  add_default_feedbases.py  add_deleted_column.py  add_preferred_language_to_users.py  add_tier_to_users.py  add_token_stats_to_sessions.py  add_users_table.py  migrate.py  schema_manager.py
backend/models/: __init__.py  api.py  chat.py  common.py  feedback.py  feedbase.py
backend/nasem_dairy/: __init__.py  pyproject.toml
backend/prompts/: code_worker.md  coder.md  nutritionist.md  nutritionist_beef_cow.md  nutritionist_cat.md  nutritionist_dairy_cow.md  nutritionist_dog.md  researcher.md  search_worker.md  supervisor.md  title_generation.md
backend/scripts/: build_companion_feedbases.py  extract_nasem_feeds.py  feedipedia_to_nasem.py  generate_new_embeddings.py  manual_feed_overrides.json  nasem_feedbase.json  nasem_nutrient_graph.py  scrape_feedipedia.py
backend/services/: chat_history_service.py  embedding_service.py  nasem_service.py  session_manager.py
backend/test_suite/: QUICKSTART.md  README.md  calculate_test_costs.py  conclude_results.py  dump_session.py  extract_test_results.py  run_test_batch.py  test_beef_scenarios.py
backend/tools/: ask_user_tool.py  excel_tools.py  formulation_exporter.py  formulation_tools.py  nasem_tools.py  tools.py
backend/utils/: deepseek_wrapper.py  excel_tools.py  formulation_exporter.py  formulation_tools.py  language.py  message_parser.py  message_processor.py  model_config.py  nasem_tools.py  prompt_loader.py  (+8 more)
(+90 files in other folders)
