[project]
name = "ration-agent-backend"
version = "0.1.0"
description = "LangGraph ReAct Agent Backend"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.35",
    "langgraph>=1.1.3",
    "langchain-openrouter>=0.1.0",
    "langchain-core>=1.2.20",
    "langchain-community>=0.3.12",
    "langchain-postgres>=0.0.12",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "python-multipart==0.0.9",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "openpyxl>=3.1.5",
    "duckduckgo-search>=6.3.11",
    "crawl4ai>=0.4.0",
    "jinja2>=3.1.0",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg-pool>=3.2.6",
    "bleach>=6.1.0",
    "requests>=2.32.4",
    "tiktoken>=0.8.0",
    "langgraph-swarm>=0.0.14",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "fastapi-users[sqlalchemy,oauth]>=13.0.0,<14.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.1.2",
    "google-auth[requests]>=2.43.0",
    "beautifulsoup4>=4.12.0",
    "nasem_dairy",
]

[tool.uv]
dev-dependencies = [
    "vulture>=2.14",
]

[tool.uv.sources]
nasem_dairy = { path = "./nasem_dairy", editable = true }
