[project]
name = "nasem_dairy"
version = "0.1.0"
description = "NASEM 2021 Dairy Cattle Model (numpy 2.x compatible fork)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

